src/styles/components/collapse.scss
.collapse {
	position: relative;
	overflow: hidden;
	background-color: rgba(246, 246, 246, 0.45);
	border-radius: 5px;

	.arrow-up {
		cursor: pointer;
		position: absolute;
		height: 16px;
		top: 5px;
		right: 15px;
		transform: rotate(270deg);

		// rotation when closing a collapse
		animation: uparrowtation 0.3s ease-out;
		@keyframes uparrowtation {
			0% {
				transform: rotate(90deg);
			}
			100% {
				transform: rotate(270deg);
			}
		}
	}

	.arrow-down {
		@extend .arrow-up;
		transform: rotate(90deg);

		// rotation when opening a collapse
		animation: downarrowtation 0.3s ease-out;
		@keyframes downarrowtation {
			0% {
				transform: rotate(270deg);
			}
			100% {
				transform: rotate(90deg);
			}
		}
	}
}

.title-collapse {
	background-color: $color-primary;
	color: white;
	font-size: 13px;
	font-weight: bold;
	border-radius: 5px;
	height: 30px;
	padding-left: 10px;
	display: flex;
	align-items: center;
}

.description-container {
	overflow: hidden;
	height: fit-content;

	// div container will appear when opening a collapse
	animation: heighty 0.6s linear;
	@keyframes heighty {
		0% {
			max-height: 0px;
		}
		100% {
			max-height: 200px;
		}
	}
}

.description-collapse {
	margin: 13px 20px 20px 20px;
	font-size: 12px;
	font-weight: 400;
	position: relative;

	// text description will appear when opening a collapse
	animation: reveal 0.3s linear;
	@keyframes reveal {
		0% {
			bottom: 100px;
		}	
		100% {
			bottom: 0px;
		}
	}

	// for equipements
	li {
		font-weight: 400;
	}
}


@media (min-width: $breakpoint-mobile) {
	.collapse {
		width: 100%;
		border-radius: 10px;

		.arrow-up {
			height: 24px;
			top: 13px;
			right: 20px;
		}
	}

	.title-collapse {
		font-size: 24px;
		height: 52px;
		border-radius: 10px;
		padding-left: 15px;
	}

	.description-collapse {
		font-size: 18px;
	}
}

